<resources>
    <string name="app_name">Genedu</string>
    <string name="default_web_client_id">385525202845-rd48gu97ksmbbe1v45ucfqavqc7ikg6h.apps.googleusercontent.com</string>
    <string name="user">User</string>
    <string name="main_slogan">Empower Your Learning Journey with Genedu: Organize, Focus, Achieve!</string>
    <string name="main_task">Task</string>
    <string name="task_slogan">Tick Tasks, Triumph Tomorrow!</string>
    <string name="note_slogan">Ink Wisdom, Rewrite Destiny!</string>
    <string name="main_note">Note</string>
    <string name="mimo_slogan">Study Smart, Time Wise!</string>
    <string name="main_mimo">Mindfull Moments</string>
    <string name="main_tools">Tools</string>
    <string name="tools_slogan">Turbocharges Study Success!</string>
    <string name="note_title">Note Title</string>
    <string name="desc_note">Desc Note</string>
    <string name="type_note_here">Type note here…</string>
    <string name="sign_in">Sign in</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="notes_you_add_appear_here">Notes you add appear here</string>
    <string name="start_mimo">Start</string>
    <string name="time_left_mimo">00:00:00</string>
    <string name="pause_mimo">Pause</string>
    <string name="resume_mimo">Resume</string>
    <string name="format_timer_mimo">%02d:%02d:%02d</string>
    <string name="toast_exit_mimo">Wait until the timer finishes or reset the timer first!</string>
    <string name="toast_times_up_mimo">Times Up!</string>
    <string name="toast_warning_start_mimo">Enter the time by click the "Add" button first!</string>
    <string name="negative_button_mimo">No</string>
    <string name="positive_button_mimo">Yes</string>
    <string name="reset_time_mimo">Are you sure you want to reset the timer?</string>
    <string name="usr">!</string>
    <string name="title_create_note">Enter your note title here</string>
    <string name="desc_create_note">Enter your note content here</string>
    <string name="title_edit_profile">Manage Account</string>
    <string name="username">Username</string>
    <string name="hint_username">Your name</string>
    <string name="email">Email Address</string>
    <string name="hint_email">Your email address</string>
    <string name="warning_email_edit_profile">Email can\'t be edited</string>
    <string name="btn_save_change">Save Change</string>
    <string name="slogan_login">Welcome Back, Enjoy Our Features!</string>
    <string name="password">Password</string>
    <string name="hint_password">Your password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="btn_login">Login</string>
    <string name="new_here_register">New Here? Register</string>
    <string name="title_mimo">Manage Your Time</string>
    <string name="text_timer_mimo">time left</string>
    <string name="title_note_act">Your All Note</string>
    <string name="search_notes">Search notes…</string>
    <string name="title_privpol_act">Privacy Policy</string>
    <string name="title_privpol">Genedu - Privacy Policy</string>
    <string name="content_privpol" translatable="false">Introduction\n\nWelcome to Genedu! We are committed to protecting the privacy of our users and respecting the security of your personal information. This Privacy Policy explains how we collect, use, and protect the information you provide when using the Genedu mobile application (\"Genedu\" or \"App\"). By using Genedu, you agree to the collection and use of your information as outlined in this Privacy Policy. If you do not agree with this policy, please do not use Genedu.\n\n\nInformation We Collect\n\n1. Information Provided by Users: We may collect personal information you provide when creating a user account, such as name, email address, and other contact information.\n2. Usage Information: We may collect information about how you use Genedu, including your activities within the app, time and duration of usage, and interaction with specific features.\n3. Device Information: We may collect information about your device, including device type, operating system, network information, and unique device identifiers.\n\n\nUse of Information\n\n1. Information Usage: We use the information collected to provide, operate, and improve Genedu, including personalizing the user experience, managing user accounts, and delivering relevant content.\n2. Communication: We may use the contact information you provide to send updates, notifications, and other information related to Genedu.\n3. Analytics: We may use the collected information to analyze usage trends, identify technical issues, and conduct research for app development and improvement purposes.\n\n\nSharing of Information\n\nWe do not share your personal information with third parties except under the following circumstances:\n\n1. Consent: With your consent to share specific information.\n2. Trusted Third Parties: With trusted third parties who provide services on our behalf, as outlined in this Privacy Policy.\n3. Legal Compliance: If required by law or a valid legal process.\n\n\nInformation Security\n\nWe take reasonable security measures to protect your personal information from unauthorized access, use, or disclosure. However, no method of data transmission or storage is entirely secure.\n\n\nYour Rights\n\nYou have the right to access, update, and delete your personal information that we store. You may also choose to opt-out of receiving marketing communications from us by contacting us directly.\n\n\nChanges to Privacy Policy\n\nWe may update this Privacy Policy from time to time without prior notice. We will notify you of material changes through notifications in the app or via the contact information you provide.\n\n\nContact Us\n\nIf you have any questions or concerns about this Privacy Policy, please contact us at andregt.project@gmail.com.\n\n\nThank you for using Genedu!\n</string>
    <string name="slogan_register">Create Your Account, Enjoy Our Features!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_confirm_password">Your confirm password</string>
    <string name="btn_sign_in">Sign Up</string>
    <string name="already_registered_login_here">Already Registered? Login</string>
    <string name="title_task_act">Plan Your Day</string>
    <string name="search_tasks">Search tasks…</string>
    <string name="title_tools_act">Toolbox For You</string>
    <string name="search_tools">Find study tools here…</string>
    <string name="title_tos_act">Terms of Use</string>
    <string name="title_tos">Genedu - Terms of Use</string>
    <string name="content_tos" translatable="false">\nIntroduction\n\nWelcome to Genedu! These Terms of Use govern your access to and use of the Genedu mobile application (\"Genedu\" or \"App\"), so please read them carefully before using our services. By accessing or using Genedu, you agree to be bound by these Terms of Use. If you do not agree to these terms, please do not use Genedu.\n\n\nAcceptance of Terms\n\nBy downloading, accessing, or using Genedu, you acknowledge that you have read, understood, and agree to be bound by these Terms of Use and our Privacy Policy. These Terms of Use constitute a legally binding agreement between you and Genedu.\n\n\nUse of Genedu\n\nGenedu is intended for personal, non-commercial use by students to assist in organizing and managing their study routines. You agree to use Genedu only for lawful purposes and in a manner consistent with these Terms of Use and all applicable laws and regulations.\n\n\nUser Accounts\n\nTo access certain features of Genedu, you may be required to create a user account. You are responsible for maintaining the confidentiality of your account credentials and for all activities that occur under your account. You agree to provide accurate, current, and complete information during the registration process and to update such information to keep it accurate, current, and complete.\n\n\nContent\n\nGenedu may allow you to upload, submit, store, send, or receive content, including but not limited to text, images, videos, and other materials (\"User Content\"). You retain ownership of any intellectual property rights that you hold in your User Content. By uploading, submitting, storing, sending, or receiving User Content through Genedu, you grant Genedu a worldwide, non-exclusive, royalty-free, sublicensable, and transferable license to use, reproduce, modify, adapt, publish, translate, distribute, perform, and display such User Content in connection with operating and providing Genedu.\n\n\nProhibited Conduct\n\nYou agree not to engage in any of the following prohibited activities:\n\n1. Violating any applicable law or regulation.\n2. Interfering with or disrupting the operation of Genedu or any servers or networks connected to Genedu.\n3. Impersonating any person or entity or falsely stating or otherwise misrepresenting your affiliation with a person or entity.\n4. Uploading, submitting, storing, sending, or receiving any content that is unlawful, harmful, threatening, abusive, harassing, defamatory, vulgar, obscene, invasive of another\'s privacy, hateful, or racially, ethnically, or otherwise objectionable.\n\n\nTermination\n\nWe reserve the right to suspend or terminate your access to Genedu at any time, with or without cause, and with or without notice. Upon termination, your right to access or use Genedu will immediately cease.\n\n\nModifications\n\nWe may revise these Terms of Use from time to time without prior notice. By continuing to access or use Genedu after we have posted a revised version of these Terms of Use, you agree to be bound by the revised terms.\n\n\nContact Us\n\nIf you have any questions or concerns about these Terms of Use, please contact us at andregt.project@gmail.com.\n\n\nThank you for using Genedu!</string>
    <string name="title_user_act">Your Profile</string>
    <string name="warning_email_verify">Email Not Verified !</string>
    <string name="btn_verify">Verify Now</string>
    <string name="account">Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="settings">Settings</string>
    <string name="btn_logout">Logout Account</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="btn_ok">Ok</string>
    <string name="task_title">Write Your Task Here…</string>
    <string name="task_date">Set Due Date</string>
    <string name="task_time">Set Due Time</string>
    <string name="btn_save">Save</string>
    <string name="view_detail_note">View Detail</string>
    <string name="update_note">Update</string>
    <string name="delete_note_menu">Delete</string>
    <string name="title_compass_act">Your Navigator</string>
    <string name="compass">Compass</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="title_stopwatch_act">Your Time Recorder</string>
    <string name="timer_stopwatch">00:00:00:00</string>
    <string name="toast_exit_stopwatch">Pause the timer before exiting, please!</string>
    <string name="warning_exit_stopwatch">Are you sure you want to exit? All saved laps will be cleared!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="warning_reset_timer">Are you sure you want to reset the timer? All saved laps will be cleared!</string>
    <string name="snap">Camera</string>
    <string name="stash">Storage</string>
    <string name="choose_image_source">Choose Image Source</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="add_music">Add Music</string>
    <string name="select_music">Select Music</string>
</resources>