<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <EditText
        android:id="@+id/etHours"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/ubuntu_regular"
        android:hint="@string/hours"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/etMinutes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etMinutes"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_regular"
        android:hint="@string/minutes"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/etSeconds"
        app:layout_constraintStart_toEndOf="@+id/etHours"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSeconds"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/ubuntu_regular"
        android:hint="@string/seconds"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etMinutes"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMinutes">
        <TextView
            android:id="@+id/select_music_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ubuntu_regular"
            android:maxLines="1"
            android:text="@string/select_music"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="14sp" />
        <LinearLayout
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/background_button_filled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/select_music_name"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnAddMusic"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/background_button_filled"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_music"
                app:tint="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_music"
                android:gravity="center"
                android:fontFamily="@font/ubuntu_medium"
                android:textColor="@color/white"
                android:textSize="14sp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_button_filled"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/btn_ok"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_timer" />

</androidx.constraintlayout.widget.ConstraintLayout>
