<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_image_source"
        android:fontFamily="@font/ubuntu_bold"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
        android:id="@+id/capture"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:background="@drawable/background_button_filled"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gallery">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon_capture"
            android:background="@drawable/background_button_filled"
            android:scaleType="centerCrop"
            android:padding="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/snap"
            android:fontFamily="@font/ubuntu_medium"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gallery"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:background="@drawable/background_button_filled"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:layout_constraintStart_toEndOf="@+id/capture"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon_gallery"
            android:background="@drawable/background_button_filled"
            android:scaleType="centerCrop"
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stash"
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/white"/>

    </LinearLayout>
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:background="@drawable/background_button_filled"
        android:textColor="@color/white"
        android:fontFamily="@font/ubuntu_medium"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/capture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
